# DJ-LINK-STAGE-Clean-Baseline

./: ARCHITECTURE_OVERVIEW.md  CDJ_DATA_FLOW.md  CHANGELOG.md  PROJECT_ARCHITECTURE.md  README.md  README_USER.md  TRUE_ARCHITECTURE.md  package-lock.json  package.json  requirements.txt  run-desktop-ui.sh
bridge-cpp/: CMakeLists.txt
bridge-cpp/src/: main.cpp
config/: user_settings.json
dbclient/: .runtime.cp  README.md  pom.xml
dbclient/src/main/java/dbclient/: DbClient.java  Main.java
dbclient/src/main/resources/web/: index.html
desktop-ui/: build.gradle.kts  settings.gradle.kts
desktop-ui/src/main/kotlin/: Main.kt
desktop-ui/src/main/kotlin/waveform/: BeatLinkComponents.kt  DetailRenderPipeline.kt  (+6 more)
djlink-service/: pom.xml
docs/: API_OVERVIEW.md  API_PLAYERS_SPEC.md  ARCH_TRIGGER_DESIGN.md  BLT-OpenClaw-设置指南.md  INCIDENT_LOCAL_PLAYER_DEVICE_JSON_CHAIN_2026-03-19.md  LOCAL_PLAYER_ERROR_VISUALIZATION_RULES.md  LOCAL_PLAYER_SUBSYSTEM.md  MA2-OpenClaw-适配编程手册.md  PHASE1_COMPLETE.md  PHASE_A_STABILIZATION.md  PHASE_C1_BPM_BASELINE.md  PROJECT_DEVELOPMENT_GUIDE.md  STATE_DISPLAY_MAPPING.md  UNIFIED_STATE_MODEL.md  项目演进.md
memory/: 2026-03-08.md  2026-03-09.md  2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-14.md  2026-03-15.md  2026-03-16.md  2026-03-25.md  CURRENT_STATUS.md  DECISIONS.md  HANDOVER.md  HISTORY_CHANGES.md  NEXT_TASK.md  PLAYER_ANALYSIS_PLAN.md  PROJECT_CONTEXT.md  PROJECT_MASTER_DOC.md
scripts/: ableton-link-bridge.js  build-bridge-cpp.sh  build-dbclient-runtime.sh  check-dbclient-health.sh  start-dbclient.sh
(+91 files in other folders)
